--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1949,3 +1949,29 @@
   author={Timo Honkela and Teuvo Kohonen},
   year={2009}
 }
+
+@book{flake_computational,
+title = {The Computational Beauty of Nature: Computer Explorations of Fractals, Chaos, Complex Systems, and Adaptation},
+author = {Gary M. Flake},
+date = {1998},
+publisher = {MIT Press}
+}
+
+@inproceedings{LeCun1998ConvolutionalNF,
+  title={Convolutional networks for images, speech, and time series},
+  author={Yann LeCun and Yoshua Bengio},
+  year={1998}
+}
+
+@article{mora_are_2011,
+	title = {Are biological systems poised at criticality?},
+	volume = {144},
+	issn = {0022-4715, 1572-9613},
+	doi = {10.1007/s10955-011-0229-4},
+	number = {2},
+	journal = {Journal of Statistical Physics},
+	author = {Mora, Thierry and Bialek, William},
+	month = jul,
+	year = {2011},
+  pages = {268--302},
+  }
