corrections chap 4 updt

--- a/02-Architectures/source.tex
+++ b/02-Architectures/source.tex
@@ -789,7 +789,7 @@ L'architecture CxSOM que nous proposons et étudions dans cette thèse est une a
 Ce modèle fait suite aux travaux amorcés en \cite{baheux_towards_2014}, qui définissent un modèle d'architecture récurrente utilisant la transmission de la position du BMU entre des cartes de Kohonen, et utilisent un mécanisme de relaxation pour gérer les rétroactions entre cartes.
 Par leur motivation, qui est le développement d'un système multi-cartes générique, nos travaux se rapprochent aussi des travaux conduits sur l'architecture A-SOM~\cite{johnsson_associating_2008, johnsson_associative_2009,gil_sarasom_2015, Buonamente2015DiscriminatingAS}~; les choix de modèle sont cependant différents.
 
-Nous dirigerons les travaux de cette thèse vers l'identification des mécanismes d'apprentissage associatifs dans de petites architectures de deux et trois cartes. Pour cela, nous élaborerons une méthode expérimentale et des représentations adaptées du modèle, dans une optique de création d'architectures comportant de nombreuses cartes.
+Nous dirigerons les travaux de cette thèse vers l'identification des mécanismes d'apprentissage associatifs dans de petites architectures de deux et trois cartes. Pour cela, nous élaborerons une méthode expérimentale et des représentations permettant de mettre en évidence ces mécanismes.
 
 % \begin{figure*}[b]
 %     \centering\includegraphics[width=0.5\textwidth]{lego2.jpg}
