--- a/07-Relaxation/source.tex
+++ b/07-Relaxation/source.tex
@@ -173,7 +173,8 @@ L'activité contextuelle $a_c\m{i}$ d'une carte est définie comme la moyenne de
 \end{equation}
 
 Pour simplifier les notations, nous noterons que les entrées contextuelles d'une carte $i$ sont $\{ \inpc\m{i}_k, k = 0 \cdots n , k \neq i  \}$.
-Par la relaxation, nous cherchons une position $(\bmu\m{1}, \cdots, \bmu\m{n})$ telle que pour tout $i$, $a_g\m{i}(p,  \inpx\m{i}, \inpc\m{i}_0, \cdots, \inpc\m{i}_K)$ soit maximale. $a_g\m{i}$ est à valeurs positives pour tout $i$~; maximiser individuellement $a_g\m{i}$ revient à maximiser leur somme.
+Par la relaxation, nous cherchons une position $(\bmu\m{1}, \cdots, \bmu\m{n})$ telle que pour tout $i$, $a_g\m{i}(p,  \inpx\m{i}, \inpc\m{i}_0, \cdots, \inpc\m{i}_n)$ soit maximale. 
+$a_g\m{i}$ est à valeurs positives pour tout $i$~; maximiser individuellement $a_g\m{i}$ revient à maximiser leur somme.
 
 Nous proposons d'exprimer la relaxation comme une heuristique de recherche d'une solution du problème d'optimisation suivant~:
 \begin{equation}\label{eq:opti}
