--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -87,7 +87,7 @@ Il reste également à définir des cas d'études sur lesquels étudier des arch
 L'aspect modulaire de ces architectures pourrait par exemple nous faire envisager des modules d'interaction avec l'environnement, qui traitent les entrées sensorielles et des modules d'apprentissage, en s'inspirant des structures fonctionnelles observées en biologie \parencite{Ellefsen2015NeuralMH}. 
 Des modélisations récentes du cortex sous forme de réseaux mettent l'accent sur son aspect modulaire multi-échelles \parencite{betzel_multi-scale_2017}~: le cortex semble s'organiser en une architecture dont les modules sont eux-mêmes des architectures modulaires, loin des trois modules que nous avons étudiés dans cette thèse, ce qui peut motiver la construction d'architectures de bien plus grande ampleur.
 
-Un second objectif du développement d'architectures multi-cartes est l'intégration de connexions récurrentes entre cartes, qui pourraient permettre de combiner le traitement de données séquentielles et données mutlimodales au sein d'une même architecture.
+Un second objectif du développement d'architectures multi-cartes est l'intégration de connexions récurrentes entre cartes, qui pourraient permettre de combiner le traitement de données séquentielles et données multimodales au sein d'une même architecture.
 L'utilisation de la position du BMU comme interface a été utilisée au sein de modèles de cartes récurrentes telles que SOMSD \parencite{hagenbuchner_self-organizing_2003}~; ce modèle ainsi que son adaptation sur deux cartes ont fait l'objet de travaux dans notre équipe \parencite{baheux_towards_2014, fix20}. 
 Les propriétés d'organisation observées sur ce type de cartes récurrentes rejoignent celles observée dans l'architecture CxSOM~: une carte distingue son BMU en fonction de l'entrée externe, mais également en fonction de sa place dans la séquence d'entrée. Cette information transmise entre chaque pas de temps est homogène à celle transmise entre cartes dans l'architecture CxSOM.
 Une perspective d'étude sera ainsi d'associer des connexions temporelles et des connexions multimodales au sein d'une architecture de cartes afin de traiter des données séquentielles.
