--- a/06-Analyse/source.tex
+++ b/06-Analyse/source.tex
@@ -410,7 +410,7 @@ Dans ces deux exemples, chaque carte a encodé l'ensemble du modèle d'entrées 
 
 \begin{figure}[h!]
 	\centering\includegraphics[width=\textwidth]{cercle3D/weights.pdf}
-	\caption{Représentation cartographique des poids et entrées dans l'architecture de trois cartes apprenant sur le cercle en trois dimensions \textbf{G}. Les motifs pseudo-périodiques des poids contextuels et les zones de BMU sont similaires à celles observées sur l'architecture de deux cartes. Une zone encode un intervalle de valeur de $(\inpx\m{1}, \inpx\m{2}, \inpx\{3})$. \label{fig:w_cercle}}
+	\caption{Représentation cartographique des poids et entrées dans l'architecture de trois cartes apprenant sur le cercle en trois dimensions \textbf{G}. Les motifs pseudo-périodiques des poids contextuels et les zones de BMU sont similaires à celles observées sur l'architecture de deux cartes. Une zone encode un intervalle de valeur de $(\inpx\m{1}, \inpx\m{2}, \inpx\m{3})$. \label{fig:w_cercle}}
 \end{figure}
 
 \begin{figure}[h!]
