--- a/titlepage.tex
+++ b/titlepage.tex
@@ -1,4 +1,4 @@
-\ThesisTitle{CxSOM~: vers une architecture non-hiérarchique de cartes auto-organisatrices}
+\ThesisTitle{CxSOM~: vers une architecture non hiérarchique de cartes auto-organisatrices}
 \ThesisSubtitle{Méthodes et outils d'analyse}
 
 \ThesisDate{ 13 juin 2023}
